fixed nav bug and home pic overflow

--- a/src/components/common/styles/card.css
+++ b/src/components/common/styles/card.css
@@ -11,9 +11,10 @@
 	padding-bottom: 5px;
 }
 
-.card-header {
+.card-headers {
 	display: flex;
 	/* align-items: center; */
+	
 }
 
 
