--- a/src/components/common/styles/navBar.css
+++ b/src/components/common/styles/navBar.css
@@ -5,6 +5,8 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	
+
 }
 
 .navbar {
@@ -14,26 +16,28 @@
 	position: fixed;
 	top: 3vh;
 	z-index: 999;
+	
 }
 
-.nav-background {
+.nav-backgrounds {
+	display: flex;
 	width: 380px;
 	height: 40px;
-	padding-left: 0%;
-	padding-right: 0%;
 	background: #fff;
 	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 	border-radius: 40px;
 }
 
+
 .nav-list {
+	padding: 0;
+	margin: 0;
+	width: 100%;
 	display: flex;
-	justify-content: space-between;
+	align-items: end;
+	justify-content: space-evenly;
 	list-style: none;
 	align-items: center;
-	margin-left: -16px;
-	margin-right: 20px;
-	margin-top: 11px;
 }
 
 .nav-item {
@@ -57,15 +61,12 @@
 
 @media (max-width: 600px) {
 	.navbar {
-		margin-left: 25%;
-		margin-right: 25%;
-		width: 80%;
-		font-size: 80%;
+		width: 60%;
+		font-size: 90%;
 	}
 
 	.nav-background {
 		width: 80%;
-		height: 40px;
 	}
 
 	.nav-item {
